--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     setInterval(function () {
       const main = innerWindow.document.getElementById('main');
       console.log(main.innerText);
-      console.log('innerWindow.frameElement', innerWindow.frameElement)
+      console.log('innerWindow.frameElement', innerWindow.frameElement);
+      console.log('innerWindow.top', innerWindow.top);
     }, 1000)
   }
 </script>
